<resources>
    <string name="app_name">Automaat</string>
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_notifications">Notifications</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="price">100</string>
    <string name="filter">Filter</string>
    <string name="filters">filters</string>
    <string name="filter_price"><![CDATA[Price & Payment]]></string>
    <string name="min_price">From</string>
    <string name="max_price">To</string>
    <string name="car_details">Car Details</string>
    <string name="engine"><![CDATA[" 3.0 L B58 turbo I6 & electric motor"]]></string>
    <string name="options">Head-up display, LED lighting, Seat heating, Blind spot detection, Adaptive Cruise Control, Lumbar support, Keyless Entry, Navigation system</string>
    <string name="reserve">Reserve</string>
    <string name="locationTitle">Location\n</string>
    <string name="engineTitle">Engine\n</string>
    <string name="modelYearTitle">First registration</string>
    <string name="fuelTitle">Fuel type</string>
    <string name="locationIcon" />
    <string name="engineIcon">\n</string>
    <string name="modelYearIcon" />
    <string name="fuelIcon" />
    <string name="gasoline">Gasoline</string>
    <string name="availableSince">Available since</string>
    <string name="basic_data">Basic Data\n</string>
    <string name="reservation_details">Reservation details\n</string>
    <string name="euro">€</string>
    <string name="costs">Costs: €</string>
    <string name="username_hint">Enter your username here</string>
    <string name="password_hint">Enter your password here</string>
    <string name="loginButton">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="priceTitle">Maximum Price</string>
    <string name="sorting_title">Sorting</string>
    <string name="select_start_date">Start date</string>
    <string name="select_end_date">End date</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
</resources>
