<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_calender"
                android:text="@string/select_start_date" />

            <TextView
                android:id="@+id/textViewEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewStartDate"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_calender"
                android:text="@string/select_end_date" />

            <TextView
                android:id="@+id/euroTextView"
                style="@style/textViewMediumStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/costs" />

            <TextView
                android:id="@+id/priceTextView"
                style="@style/textViewMediumStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_toEndOf="@id/euroTextView" />


            <Button
                android:id="@+id/buttonReserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEndDate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/reserve" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>