<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/carBrandTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand" />

        <TextView
            android:id="@+id/carModelTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Active" />

        <TextView
            android:id="@+id/rentalStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <Spinner
                android:id="@+id/spinnerStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <Spinner
                android:id="@+id/spinnerEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinnerStartDate"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/euroTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewMediumStyle"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="1dp"
                android:text="@string/euro"/>

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewMediumStyle"
                android:layout_marginTop="90dp"/>


            <Button
                android:id="@+id/buttonReserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserve"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/spinnerEndDate"
                android:layout_marginTop="24dp"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>