<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.automaat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_filtersFragment"
            app:destination="@id/navigation_filters"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_filters" />
        <argument
            android:name="appliedFilters"
            app:argType="com.example.automaat.entities.FilterModel" />
        <action
            android:id="@+id/action_navigation_home_to_car_details"
            app:destination="@id/car_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/car_details"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_navigation_home_to_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
        <argument
            android:name="appliedFilters"
            app:argType="com.example.automaat.entities.FilterModel" />

        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.automaat.ui.reservations.ReservationFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations">
        <action
            android:id="@+id/action_navigation_reservations_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.automaat.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_filters"
        android:name="com.example.automaat.ui.filters.FiltersFragment"
        android:label="@string/filters"
        tools:layout="@layout/fragment_filters">
        <action
            android:id="@+id/action_navigation_filters_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="appliedFilters"
            app:argType="com.example.automaat.entities.FilterModel" />
    </fragment>
    <fragment
        android:id="@+id/car_details"
        android:name="com.example.automaat.ui.cars.CarDetailsFragment"
        android:label="@string/car_details"
        tools:layout="@layout/fragment_car_details">
        <action
            android:id="@+id/action_car_details_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_home" />
        <argument
            android:name="car"
            app:argType="com.example.automaat.entities.CarModel" />
        <action
            android:id="@+id/action_car_details_to_reservation_details"
            app:destination="@id/create_reservation" />
        <argument
            android:name="carWithRental"
            app:argType="com.example.automaat.entities.relations.CarWithRental" />
    </fragment>
    <fragment
        android:id="@+id/create_reservation"
        android:name="com.example.automaat.ui.rentals.CreateReservationFragment"
        android:label="@string/reservation_details"
        tools:layout="@layout/fragment_create_reservation">
        <argument
            android:name="carWithRental"
            app:argType="com.example.automaat.entities.relations.CarWithRental" />
        <action
            android:id="@+id/action_reservation_details_to_car_details"
            app:destination="@id/car_details" />
        <action
            android:id="@+id/action_create_reservation_to_reservations"
            app:destination="@id/navigation_reservations" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.automaat.ui.authentication.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment" />
        <action
            android:id="@+id/action_loginFragment_to_resetPasswordFragment"
            app:destination="@id/resetPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.example.automaat.ui.resetPassword.ResetPasswordFragment"
        android:label="ResetPasswordFragment"
        tools:layout="@layout/fragment_reset_password" >
        <action
            android:id="@+id/action_resetPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>