<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filters.FiltersFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/light_gray"
            app:cardElevation="1dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/brandTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:padding="8dp"
                android:text="@string/filter_price"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="42dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/minPriceEditText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/min_price"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/maxPriceEditText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/max_price"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/initCarsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Initialize Cars" />

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">
            >

            <Button
                android:id="@+id/resultsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Results" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>